# tubelet-service

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  main.cpp  run-docker.sh  tubelets.cpp  tubelets.h
conda-recipe/: meta.yaml
python/: TubeletServiceTest.ipynb  client.py  tubelet_service_pb2.py  tubelet_service_pb2_grpc.py
python/.ipynb_checkpoints/: TubeletServiceTest-checkpoint.ipynb
src/: CMakeLists.txt  main.cpp  tubelet_service.grpc.pb.cc  tubelet_service.grpc.pb.h  tubelet_service.pb.cc  tubelet_service.pb.h  tubelets.cpp  tubelets.h
src/proto/: build-proto.sh  tubelet_service.proto
